# Cookidoo-Rohlik

./: .gitignore  README.md  hacs.json  metrics.md  pyproject.toml
config/: config.example.yaml  product_map.example.yaml
custom_components/cookidoo_rohlik/: __init__.py  config_flow.py  const.py  manifest.json  services.yaml
custom_components/cookidoo_rohlik/core/: __init__.py  classify.py  cookidoo_client.py  matching.py  orchestrator.py  planner.py  quantity.py  render.py  rohlik_client.py
custom_components/cookidoo_rohlik/translations/: en.json
examples/: ha_automations.yaml
scripts/: sync_core.sh
src/cookidoo_rohlik/: __init__.py  classify.py  cli.py  matching.py  models.py
tests/: sample_week.json  test_planner.py  test_rohlik.py
