[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cookidoo-rohlik"
version = "0.1.0"
description = "Order Cookidoo weekly meal plan ingredients from Rohlik.cz (fresh items just-in-time)"
requires-python = ">=3.11"
dependencies = [
  "cookidoo-api>=0.17",
  "aiohttp>=3.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
cookidoo-rohlik = "cookidoo_rohlik.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
